# xic

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  justfile  release.toml
.github/workflows/: ci.yaml  images.yaml  release.yaml
src/: cli.rs  io.rs  main.rs
src/io/: xic_output.rs
tests/: container.yaml  xic_input.json  xic_output.json  xic_output_base64.json
